# client-server-app

socket-client/: CMakeLists.txt  makefile
socket-client/include/: linked-list.h
socket-client/src/: client.c  file_io.c  functions.c  main.c
socket-server/: CMakeLists.txt  file_io.c  file_io.h  linked-list.c  main  main.c  makefile
socket-server/include/: functions.h
socket-server/src/: file_io.c  functions.c  main.c  server.c
sources/: file
try/: client.c  server.c
